# simglobe-analysis

./: .gitignore  README.md  config.toml  profile.prof  pyproject.toml  test.py
src/: config.py  main.py  process.py  util.py  visual.py
