[project]
name = "simglobe-analyze"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorcet==3.1.0",
    "datashader==0.18.0",
    "matplotlib==3.10.0",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "polars==1.28.1",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.5",
    "ruff>=0.11.13",
    "scikit-learn>=1.7.0",
    "seaborn==0.13.2",
    "snakeviz>=2.2.2",
    "statsmodels==0.14.4",
    "tomli>=2.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
